Fix overlap.

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* stylelint-disable csstree/validator */
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,400&display=swap');
 
@@ -12,11 +12,11 @@
 .material-symbols-outlined {
   font-variation-settings:
     'FILL' 0,
-    'wght' 400,
+    'wght' 500,
     'GRAD' 0,
     'opsz' 48;
   color: #7d73fc;
-  font-size: 2em;
+  font-size: 2.5em;
 }
 
 body {
@@ -119,19 +119,19 @@ header {
 .nav-menu.active {
   left: 0.15vh;
   padding-left: 2.23vh;
-  top: 0;
+  margin-top: -11px;
   background-image: url(img/mobile-menu/shapes-mobile-menu.svg);
   background-repeat: no-repeat;
   background-position-y: top;
   background-size: cover;
   position: absolute;
+  padding-top: 74px;
 }
 
 .nav-ul {
   display: flex;
   flex-direction: column;
   padding: 0;
-  margin-left: 0.7vh;
   margin-top: 25vh;
 }
 
@@ -140,7 +140,6 @@ header {
 .chat {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   margin-left: 4.7vh;
   align-items: baseline;
 }
@@ -159,7 +158,7 @@ a {
 
 .nav-menu.active .nav-link {
   font-family: 'Roboto', sans-serif;
-  font-size: 1.2em;
+  font-size: 2.2em;
   font-weight: 500;
   letter-spacing: 0;
   text-align: left;
@@ -210,7 +209,11 @@ a {
   animation-iteration-count: 1;
 }
 
-.nav-menu-active #logo {
+#nav-menu {
+  display: none;
+}
+
+.nav-menu-active .placeholder {
   display: none;
 }
 
@@ -552,7 +555,7 @@ li {
   line-height: 2em;
   text-align: center;
   color: #b3bac5;
-  padding-left: 0.79vh 0;
+  padding-left: 0.79vh;
   order: 1;
 }
 
@@ -577,7 +580,7 @@ li {
   line-height: 2em;
   text-align: center;
   color: #b3bac5;
-  padding-left: 0.79vh 0;
+  padding-left: 0.79vh;
 }
 
 .social {
@@ -762,6 +765,7 @@ li {
   bottom: 50%;
   z-index: 99;
   transition: 200ms ease-in-out;
+  height: 100%;
 }
 
 .popup-description {
@@ -771,7 +775,9 @@ li {
   color: #fff;
   line-height: 1.5em;
   letter-spacing: 0;
-  text-align: center;
+  text-align: justify;
+  width: 54.6vh;
+  margin-top: 4.7vh;
 }
 
 .d-none {
@@ -793,11 +799,12 @@ li {
   display: flex;
   align-items: center;
   padding: 0;
+  margin-top: 4.7vh;
 }
 
 .popup-image {
   max-width: 100%;
-  width: 64vh;
+  width: 73vh;
 }
 
 .popup-li {
@@ -1119,12 +1126,12 @@ textarea:hover {
 }
 
 button:hover {
-  background: hwb(244 45% 1%);
+  background: rgb(124, 115, 252);
   box-shadow: 0 8px 16px rgba(125, 115, 252, 0.48);
 }
 
 form button:hover {
-  background: hwb(244 45% 1%);
+  background: rgb(124, 115, 252);
   box-shadow: 0 8px 16px rgba(125, 115, 252, 0.48);
 }
 
@@ -1198,18 +1205,26 @@ form button:hover {
     height: 14.09vh;
   }
 
-  .nav-menu {
+  #nav-menu {
     display: flex;
     position: absolute;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     padding: 0;
-    margin-top: -56px;
     gap: 8px;
-    width: 241px;
+    margin-right: 192px;
+  }
+
+  #nav-ul {
+    display: flex;
+    flex-direction: row;
     height: 40px;
-    margin-left: 37.96vh;
+    width: 241px;
+    margin-top: 16px;
+    border-radius: 0;
+    margin-left: 600px;
+    align-items: center;
   }
 
   a {
@@ -1260,24 +1275,16 @@ form button:hover {
     width: 40px;
     height: 40px;
     margin-top: 27px;
-    margin-right: -142px;
+    margin-right: 142px;
   }
 
   .placeholder {
-    width: 150px;
-    height: 40px;
     margin-left: 152px;
     margin-top: 16px;
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 10px;
-  }
-
-  #logo {
-    width: 150px;
-    line-height: 20px;
-    height: 20px;
   }
 
   .headline {
@@ -1586,7 +1593,7 @@ form button:hover {
   }
 
   h6 {
-    font-weight: 700px;
+    font-weight: 700;
     font-size: 40px;
     line-height: 52px;
   }
